# wsg50-ros-pkg

./: .gitignore  README.html  README.md  stack.xml
wsg_50/: CMakeLists.txt  cmd_measure.lua  manifest.xml
wsg_50/include/wsg_50/: aux_.h  char.h  checksum.h  cmd.h  functions.h  interface.h
wsg_50/launch/: wsg_50_can.launch  wsg_50_tcp.launch  wsg_50_tcp_script.launch  wsg_50_udp_script.launch
wsg_50/src/: checksum.cpp  cmd.c  common.cpp  functions.cpp  functions_can.back.cpp  functions_can.cpp  interface.cpp  main.cpp  main_can.cpp  msg.c  serial.c  tcp.c  udp.c  wsg_50_can.cpp
wsg_50/srv/: Move.srv
wsg_50_common/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
wsg_50_common/action/: Command.action
wsg_50_common/msg/: Cmd.msg  Command.msg  Status.msg  WeissFingerData.msg
wsg_50_common/srv/: Conf.srv  GetGripperStatus.srv  Incr.srv  SetValue.srv
wsg_50_driver/: CMakeLists.txt  cmd_measure.lua  package.xml
wsg_50_driver/config/: hand0.yaml
wsg_50_driver/include/wsg_50/: common.h  fmf_weiss_finger.h  functions.h  functions_can.h  gripper_action_server.h  gripper_communication.h  gripper_socket.h  gripper_standard_action_server.h  hand.h  interface.h  msg.h  node_state.h  optical_weiss_finger.h  ring_buffer.h  serial.h  tcp.h  udp.h  weiss_finger.h
wsg_50_driver/launch/: grippercontroller.yaml  test_finger_calibrate.launch  test_finger_read.launch  test_hand_move.launch  test_hand_read.launch  wsg_50_ip.launch  wsg_50_tcp-dbg.launch  wsg_50_tcp.launch  wsg_50_tcp_script.launch  wsg_50_udp_script.launch
wsg_50_driver/lua_scripts/: optical_measure.lua
wsg_50_driver/nodes/: wsg50_acknowledge_gripper_error_node.py
wsg_50_driver/scripts/: test_gripper_driver.py
wsg_50_driver/src/: common.cpp  fmf_weiss_finger.cpp  functions.cpp  gripper_action_server.cpp  gripper_communication.cpp  gripper_socket.cpp  gripper_standard_action_server.cpp  hand.cpp  main.cpp  msg.c  optical_weiss_finger.cpp  tcp.c  test_finger_calibrate.cpp  test_finger_read.cpp  test_hand_move.cpp  test_hand_read.cpp  udp.c
wsg_50_interface/: CMakeLists.txt  package.xml
wsg_50_interface/include/: WeissHand.h
wsg_50_interface/src/: WeissHand.cpp  main.cpp
wsg_50_simulation/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  wsg_50_gr.yaml
wsg_50_simulation/controllers/: wsg_50_gl.yaml  wsg_50_gl_modular.yaml  wsg_50_gl_powerball.yaml  wsg_50_gr_modular.yaml  wsg_50_gr_powerball.yaml
wsg_50_simulation/launch/: wsg_50.launch  wsg_50_controllers.launch  wsg_50_modular_controllers.launch  wsg_50_powerball_controllers.launch  wsg_50_teleop.launch
wsg_50_simulation/src/: wsg_50_keyboard_teleop.cpp  wsg_50_sim_driver.cpp
wsg_50_simulation/srv/: Move.srv
wsg_50_simulation/urdf/: wsg_50.urdf  wsg_50.urdf.xacro
